Fix navigation links and update related HTML pages

--- a/Healthcare-Provider-Workbench.html
+++ b/Healthcare-Provider-Workbench.html
@@ -126,29 +126,17 @@ opacity: 1;
 <div class="w-full bg-white border-b border-gray-200">
 <div class="max-w-screen-2xl mx-auto px-4">
 <div class="grid grid-cols-4 gap-4">
-<a href="https://readdy.ai/home/87b0e20c-cb8f-4bbb-b497-62afd2f09171/293fb158-1fa6-4f64-bf16-f8d542a0bc8e" data-readdy="true" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-gray-700 flex items-center justify-center whitespace-nowrap" data-page="patients">
-<div class="w-4 h-4 flex items-center justify-center mr-2">
-<i class="ri-user-heart-line"></i>
-</div>
-My Patients
+<a href="index.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
+    <i class="ri-user-heart-line mr-2"></i> My Patients
 </a>
-<button class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-gray-700 flex items-center justify-center whitespace-nowrap" data-page="calendar">
-<div class="w-4 h-4 flex items-center justify-center mr-2">
-<i class="ri-calendar-2-line"></i>
-</div>
-My Calendar
-</button>
-<a href="https://readdy.ai/home/87b0e20c-cb8f-4bbb-b497-62afd2f09171/aeb20a23-eb30-4a07-8477-b6567487af32" data-readdy="true" class="page-tab py-4 text-sm font-medium text-primary bg-primary/5 flex items-center justify-center whitespace-nowrap active" data-page="workbench">
-<div class="w-4 h-4 flex items-center justify-center mr-2">
-<i class="ri-dashboard-line"></i>
-</div>
-My Workbench
+<a href="my-calendar.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
+    <i class="ri-calendar-2-line mr-2"></i> My Calendar
 </a>
-<a href="https://readdy.ai/home/87b0e20c-cb8f-4bbb-b497-62afd2f09171/4a9a19fd-b96d-490c-9009-45526b63ba36" data-readdy="true" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-gray-700 flex items-center justify-center whitespace-nowrap" data-page="practice">
-<div class="w-4 h-4 flex items-center justify-center mr-2">
-<i class="ri-hospital-line"></i>
-</div>
-My Practice
+<a href="Healthcare-Provider-Workbench.html" class="page-tab py-4 text-sm font-medium text-primary bg-primary/5 flex items-center justify-center whitespace-nowrap active">
+    <i class="ri-dashboard-line mr-2"></i> My Workbench
+</a>
+<a href="My-Practice-Dashboard.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
+    <i class="ri-hospital-line mr-2"></i> My Practice
 </a>
 </div>
 </div>
@@ -577,7 +565,7 @@ Add Program
 <label class="block text-sm font-medium text-gray-700 mb-2">Included Services</label>
 <div id="servicesList" class="space-y-3">
 <div class="flex items-center gap-2">
-<div class="relative flex-1">
+<div class="relative">
 <button type="button" class="service-selector w-full px-3 py-2 border border-gray-200 rounded-lg text-sm text-left flex items-center justify-between">
 <span class="text-gray-400">Select a service</span>
 <i class="ri-arrow-down-s-line text-gray-400"></i>
@@ -1276,7 +1264,6 @@ Add Step
 <i class="ri-more-2-fill"></i>
 </div>
 </button>
-</div>
 </div>
 </div>
 </div>
