--- a/my-calendar.html
+++ b/my-calendar.html
@@ -29,10 +29,10 @@
                 <a href="my-calendar.html" class="page-tab py-4 text-sm font-medium flex items-center justify-center whitespace-nowrap active">
                     <i class="ri-calendar-2-line mr-2"></i> My Calendar
                 </a>
-                <a href="my-workbench.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
+                <a href="Healthcare-Provider-Workbench.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
                     <i class="ri-dashboard-line mr-2"></i> My Workbench
                 </a>
-                <a href="my-practice.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
+                <a href="My-Practice-Dashboard.html" class="page-tab py-4 text-sm font-medium text-gray-500 hover:text-primary hover:bg-primary/5 flex items-center justify-center whitespace-nowrap">
                     <i class="ri-hospital-line mr-2"></i> My Practice
                 </a>
             </div>
